replace TypeDispatcher