@@ -1,8 +1,9 @@
 /* (c) https://github.com/MontiCore/monticore */
 package de.monticore.lang.sd4components._cocos;
 
-import de.monticore.lang.sd4components.SD4ComponentsMill;
+import de.monticore.lang.sd4components._ast.ASTSDMessage;
 import de.monticore.lang.sd4components._ast.ASTSDPort;
+import de.monticore.lang.sd4components._ast.ASTSDTick;
 import de.monticore.lang.sdbasis._ast.ASTSDSendMessage;
 import de.monticore.lang.sdbasis._ast.ASTSequenceDiagram;
 import de.monticore.lang.sdbasis._cocos.SDBasisASTSequenceDiagramCoCo;
@@ -11,7 +12,6 @@ import de.se_rwth.commons.logging.Log;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -26,46 +26,47 @@ public class TriggerMessageOnlyToUnconnectedPortsCoCo implements SDBasisASTSeque
   public void check(ASTSequenceDiagram node) {
     List<ASTSDPort> targets = node.getSDBody().streamSDElements()
       .flatMap(e -> {
-        if (SD4ComponentsMill.typeDispatcher().isSDBasisASTSDSendMessage(e))
-          return Stream.of(SD4ComponentsMill.typeDispatcher().asSDBasisASTSDSendMessage(e));
-        if (SD4ComponentsMill.typeDispatcher().isSD4ComponentsASTSDTick(e))
-          return SD4ComponentsMill.typeDispatcher().asSD4ComponentsASTSDTick(e).streamSDSendMessages();
+        if (e instanceof ASTSDSendMessage message)
+          return Stream.of(message);
+        if (e instanceof ASTSDTick tick)
+          return tick.streamSDSendMessages();
         return Stream.empty();
       })
-      .filter(e -> SD4ComponentsMill.typeDispatcher().isSD4ComponentsASTSDMessage(e.getSDAction()))
-      .filter(e -> SD4ComponentsMill.typeDispatcher().asSD4ComponentsASTSDMessage(e.getSDAction()).isTrigger())
+      .filter(e -> e.getSDAction() instanceof ASTSDMessage message && message.isTrigger())
       .filter(ASTSDSendMessage::isPresentSDTarget)
       .map(ASTSDSendMessage::getSDTarget)
-      .filter(e -> SD4ComponentsMill.typeDispatcher().isSD4ComponentsASTSDPort(e))
-      .map(e -> SD4ComponentsMill.typeDispatcher().asSD4ComponentsASTSDPort(e))
-      .collect(Collectors.toList());
+      .filter(e -> e instanceof ASTSDPort)
+      .map(e -> (ASTSDPort) e)
+      .toList();
 
     Set<String> connectedPorts = getConnectedPorts(node);
 
     for (ASTSDPort target : targets) {
       if (connectedPorts.contains(target.getName() + "." + target.getPort())) {
-        Log.error(String.format(MESSAGE_ERROR, target.getName() + "." + target.getPort()), target.get_SourcePositionStart(), target.get_SourcePositionEnd());
+        Log.error(String.format(MESSAGE_ERROR, target.getName() + "." + target.getPort()),
+            target.get_SourcePositionStart(), target.get_SourcePositionEnd());
       }
     }
   }
 
   protected Set<String> getConnectedPorts(ASTSequenceDiagram node) {
     Set<String> targets = new LinkedHashSet<>();
-    for (ASTSDSendMessage connector : node.getSDBody().streamSDElements()
-      .flatMap(e -> {
-        if (SD4ComponentsMill.typeDispatcher().isSDBasisASTSDSendMessage(e))
-          return Stream.of(SD4ComponentsMill.typeDispatcher().asSDBasisASTSDSendMessage(e));
-        if (SD4ComponentsMill.typeDispatcher().isSD4ComponentsASTSDTick(e))
-          return SD4ComponentsMill.typeDispatcher().asSD4ComponentsASTSDTick(e).streamSDSendMessages();
-        return Stream.empty();
-      })
-      .collect(Collectors.toList())) {
+    List<ASTSDSendMessage> connectors = node.getSDBody().streamSDElements().flatMap(e -> {
+      if (e instanceof ASTSDSendMessage message) {
+        return Stream.of(message);
+      }
+      if (e instanceof ASTSDTick tick) {
+        return tick.streamSDSendMessages();
+      }
+      return Stream.empty();
+    }).toList();
+
+    for (ASTSDSendMessage connector : connectors) {
       if (connector.isPresentSDTarget()
-        && SD4ComponentsMill.typeDispatcher().isSD4ComponentsASTSDPort(connector.getSDTarget())
+        && connector.getSDTarget() instanceof ASTSDPort targetPort
         && connector.isPresentSDSource()
-        && SD4ComponentsMill.typeDispatcher().isSD4ComponentsASTSDPort(connector.getSDSource())) {
-        ASTSDPort astTarget = SD4ComponentsMill.typeDispatcher().asSD4ComponentsASTSDPort(connector.getSDTarget());
-        targets.add(astTarget.getName() + "." + astTarget.getPort());
+        && connector.getSDSource() instanceof ASTSDPort) {
+        targets.add(targetPort.getName() + "." + targetPort.getPort());
       }
     }
     return targets;
